# bitcart-docker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  admin.sh  backup.sh  bitcart-cli.sh  build.sh  changedomain.sh  cleanup.sh  create_admin.sh  dev-setup.sh  dev-start.sh  dev-stop.sh  docker-compose.dev.yml  docker-compose.yml  generated.yml  helpers.sh  install-master.sh  justfile  load_env.sh  pyproject.toml  pytest.ini  restart.sh  restore.sh  setup.cfg  setup.sh  start.sh  stop.sh  update.sh
.circleci/: config.yml  test-connectivity.sh  test-install.sh
.github/: test-connectivity.sh  test-install.sh
compose/: Dockerfile-coin.template  admin-plugins.Dockerfile  backend-compose.yml  backend-plugins.Dockerfile  backend.Dockerfile  bch.Dockerfile  bnb.Dockerfile  bsty.Dockerfile  btc.Dockerfile  coin-plugins.Dockerfile  (+17 more)
generator/: Dockerfile  __init__.py  __main__.py  constants.py  exceptions.py  generator.py  main.py  pyproject.toml  settings.py  test-requirements.txt  utils.py
generator/demo/: build.py  index.html
generator/docker-components/: admin.yml  backend.yml  binancecoin.yml  bitcoin.yml  bitcoincash.yml  caddy-https.yml  caddy.yml  cloudflare-tunnel.yml  dramatiq.yml  ergon.yml  ethereum.yml  frontend.yml  globalboost.yml  gravity.yml  groestlcoin.yml  lightning.yml  litecoin.yml  monero.yml  nginx-https.yml  nginx.yml  opt-add-ipv6.yml  opt-no-access-log.yml  pihole.yml  polygon.yml  postgres.yml  redis.yml  smartbch.yml  store.yml  tor-relay.yml  tor.yml  tron.yml  worker.yml
generator/rules/: 01_no_image.py  02_one_domain.py  03_root_path.py  04_no_reverseproxy.py  05_frontend.py  06_tor.py  07_build_time_env.py  08_scale.py  08_volumes_env.py  09_custom_version.py  10_local_rule.py  11_proxyprotocol.py  12_trusted_ips.py  bitcart_noreverseproxy.py  frontend.py  tor.py
generator/tests/: conftest.py  test_core.py  test_generator_basic.py  test_rules.py  test_settings.py  utils.py
(+29 files in other folders)
