[project]
name = "bitcart-compose-generator"
version = "1.0.0"
description = "Generate docker compose files based on env variables"
requires-python = ">=3.11"
dependencies = ["oyaml"]

[dependency-groups]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]

[tool.ruff]
target-version = "py311"
line-length = 127

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
]
ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"generator/tests/*" = ["S"]

[tool.pytest.ini_options]
addopts = ["--cov=.", "--cov-report", "term-missing"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
