[project]
name = "bitcart-compose-generator"
version = "1.0.0"
description = "Generate docker compose files based on env variables"
requires-python = ">=3.12"
dependencies = ["oyaml"]

[dependency-groups]
lint = ["prek", "ruff"]
test = ["pytest", "pytest-cov", "pytest-durations"]
dev = [
    "rust-just>=1.46.0",
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
]
ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
junit_duration_report = "call"
junit_suite_name = "bitcart_generator_test_suite"
addopts = ["--cov=.", "--cov-report", "term-missing"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
